Fix vertical centering of footer text
It was geometrically centered.. but it did not look right. This must have someting
to do with how Helvetica shoots above and below. Because there is almost no letters
shooting down, the text appeared to be too far up.

This is now compensated with different padding above and below the copyright
text.

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,9 +1,8 @@
 footer {
-  text-align: center;
-  padding: 8px;
+  padding: 8px 0 4px;
 
-  font-size: 12px;
-  line-height: 150%;
+  text-align: center;
+  font: var(--font-1);
 
   color: darkgray;
   color: var(--gray-700);
